--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,21 @@
 				
 		</div> 
 
+		<div class="components--blog-post-popup">
+			<h5>The 8 Pillars of Application Performance</h5>
+			<div class="user-info-container">
+				<img src="../assets/images/profile.png" alt="">
+				<div class="user-info">
+					<h4>Jessie Holmes</h4>
+					<h6>29 Jul 2010 ・ Solutions Architecture</h6>
+				</div>
+			</div>
+		</div>
+
+		<div class="divider">
+				
+		</div> 
+
 		<div class="components--slider">
 			<div class="swiper-container">
 				<div class="swiper-wrapper">
